--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -3,6 +3,8 @@
 @import './header.scss';
 @import './footer.scss';
 @import './elems.scss';
+@import './loader.scss';
+@import './tracker.scss';
 
 @font-face {
     font-family: 'Museo Sans Cyrl';
