--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -4,7 +4,8 @@
 @import './footer.scss';
 @import './elems.scss';
 @import './loader.scss';
-@import './tracker.scss';
+@import './blocks/tracker.scss';
+@import './blocks/home.scss';
 
 @font-face {
     font-family: 'Museo Sans Cyrl';
