--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -31,6 +31,9 @@ a {
     color: #666;
     text-decoration: none;
     margin-bottom: 12px;
+    &:hover {
+        color: #59c6f2;
+    }
 }
 
 div[block] {
