--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -18,5 +18,7 @@ footer {
     .info {
         display: flex;
         align-items: center;
+        flex-direction: column;
+        justify-content: center;
     }
 }
