--- a/src/styles/blocks/home.scss
+++ b/src/styles/blocks/home.scss
@@ -1,98 +1,3 @@
-.home2{
-    .home-wrapper{
-        background-color: #CAF8B5;
-        padding: 20px;
-        position: relative;
-    }
-    .text-content{
-        width: 100%;
-        max-width: 546px;
-        padding: 20px;
-        background: rgba( 255,255,255,0.68 );
-        border-radius: 18px;
-        font-size: 19px;
-    }
-    span {
-        display: block;
-        margin-bottom: 20px;
-        &.about {
-            color: #B51A1A;
-            font-style: italic;
-            font-weight: 600;
-        }
-    }
-    ul {
-        list-style-type: disc;
-        padding-inline-start: 27px;
-        li {
-            line-height: 25px;
-            margin-bottom: 10px;
-        }
-    }
-    strong {
-        font-weight: 600;
-    }
-
-    .image1 {
-        width: 100%;
-        height: 200px;
-        background-image: url('./images/im1.png');
-        background-repeat: no-repeat;
-        margin-top: -24px;
-        background-position-x: 26px;
-        background-size: contain;
-    }
-    .image2{
-        width: 555px;
-        height: 555px;
-        background-image: url('./images/im2.png');
-        background-repeat: no-repeat;
-        position: absolute;
-        right: 0;
-        bottom: 37px;
-        background-size: contain;
-        span {
-            display: none;
-        }
-    }
-
-    .image3{
-        background-image: url('./images/im3.png');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-    }
-
-    @media( max-width: 900px ) {
-        .home-wrapper {
-            background-color: rgb( 229, 246, 220 );
-        }
-        .image1 { display: none; }
-
-        .image2 {
-            position: static;
-            background-position: right top;
-            width: 100%;
-            max-width: 400px;
-            height: 410px;
-            margin: auto;
-            span {
-                display: block;
-                font-size: 19px;
-                width: 202px;
-                line-height: 25px;
-            }
-        }
-    }
-
-    @media ( max-width: 390px ) {
-        .image2{
-            background-image: none;
-            height: auto
-        }
-    }
-}
-
 .home{
     margin: 0 -15px;
     span {
@@ -125,8 +30,10 @@
             padding: 15px;
             border-radius: 18px;
             width: 100%;
-            max-width: 500px;
+            max-width: 542px;
             font-size: 19px;
+            color: #005095;
+            font-weight: 300;
         }
         .image1 {
             width: 100%;
@@ -203,6 +110,9 @@
     .home-ds {
         background-color: #ccf7b7;
         padding: 0 20px;
+        color: #005095;
+        font-size: 19px;
+        font-weight: 300;
         >span {
             border: 2px solid #ffffff20;
             background: #FFFFFF68;
@@ -226,6 +136,9 @@
         background: linear-gradient(180deg, rgba(204,247,183,1) 0%, rgba(233,205,187,1) 100%);
         height: 40px;
         width: 100%;
+        @media( max-width: 570px ) {
+            background: linear-gradient(180deg, #98da7a 0%, rgba(233,205,187,1) 100%);
+        }
     }
     .home-mline0 {
         background-color: #e9cdbb;
@@ -325,5 +238,131 @@
             }
         }
 
+    }
+
+    .hblock1{
+        padding: 15px;
+        background-color: #E7C4AE;
+        color: #81665D;
+        padding-bottom: 8px;
+        .inner {
+            border: 2px solid #00000020;
+            border-radius: 18px;
+            background-color: #ffffff68;
+            padding: 20px 30px;
+        }
+        @media ( max-width: 570px ) {
+            background-color: rgb(233,205,187);
+            .inner {
+                border: 0;
+                background: none;
+                padding: 0;
+            }
+        }
+    }
+
+    .hblock2 {
+        font-weight: 300;
+        background-color: #E7C4AE;
+        color: #81665D;
+        display: flex;
+        padding: 8px 15px;
+        align-items: center;
+        .inner {
+            flex: 1;
+            padding-left: 15px;
+            display: flex;
+            align-items: center;
+        }
+        .promo {
+            display: flex;
+            background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #C4C4C4;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            border-radius: 8px;
+            padding: 15px;
+            max-width: 210px;
+            width: 50%;
+
+            .promo-logo {
+                width: 70px;
+                height: 70px;
+                background-image: url('./images/logo3.png');
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+            .promo-left {
+                flex: 1;
+                padding-right: 10px;
+                >span {
+                    margin: 0;
+                }
+                .pl1 {
+                    color: #D21929;
+                    text-transform: uppercase;
+                    font-weight: 600;
+                    margin-bottom: 3px;
+                }
+                .pl2 {
+                    color: #5E5E5E;
+                    font-weight: 300;
+                    font-size: 15px;
+                    line-height: 14px;
+                    margin-bottom: 3px;
+                }
+                .pl3 {
+                    background-color: #fff;
+                    height: 23px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-weight: 600;
+                    font-size: 18px;
+                    color: #000;
+                    margin-bottom: 3px;
+                }
+
+            }
+        }
+        @media( max-width: 570px ) {
+            flex-direction: column;
+            padding: 15px;
+            .promo {
+                width: 100%;
+                max-width: 350px;
+                .promo-left {
+                    max-width: 200px;
+                }
+            }
+            .inner {
+                padding-left: 0;
+                padding-top: 15px;
+            }
+        }
+    }
+
+    .hblock3 {
+        padding: 15px;
+        background-color: #E7C4AE;
+        color: #81665D;
+        padding-bottom: 8px;
+        .inner {
+            border: 2px solid #00000020;
+            border-radius: 18px;
+            background-color: #ffffff68;
+            padding: 20px 30px;
+            line-height: 23px;
+        }
+        span {
+            margin-bottom: 0;
+        }
+        @media ( max-width: 570px ) {
+            background-color: rgb(233,205,187);
+            .inner {
+                border: 0;
+                background: none;
+                padding: 0;
+            }
+        }
     }
 }
