--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -8,6 +8,7 @@
 @import './blocks/home.scss';
 @import './blocks/returns.scss';
 @import './blocks/contacts.scss';
+@import './blocks/privacypolicy.scss';
 
 @font-face {
     font-family: 'Museo Sans Cyrl';
