--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,8 @@
 footer {
     background: #f7f7f7;
-    height: 200px;
+    min-height: 200px;
     width: 100%;
+    padding-bottom: 15px;
     .links {
         display: flex;
         flex-direction: column;
