--- a/src/styles/blocks/home.scss
+++ b/src/styles/blocks/home.scss
@@ -1,6 +1,7 @@
-.home {
+article.home {
     margin: 0 -15px;
     font-family: 'MuseoSansCyrl 300',sans-serif;
+    padding-bottom: 25px;
     span {
         display: block;
         margin-bottom: 20px;
