--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -34,6 +34,15 @@ a {
     &:hover {
         color: #59c6f2;
     }
+    &.bonprix{
+        margin: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        position: relative;
+        z-index: 5;
+    }
 }
 
 article[block] {
